<resources>
    <string name="app_name">lec29</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_signed"><u>Already signed?</u></string>
    <string name="not_signed"><u>Not Signed</u></string>
    <string name="forget_your_password"><u>Forget your password ?</u></string>
    <string name="login">Login</string>
</resources>